[gd_scene load_steps=12 format=3 uid="uid://g3j3w1yhq2tt"]

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_pop28"]
[ext_resource type="Theme" uid="uid://qb6dgmsbm5um" path="res://assets/themes/menu_theme.tres" id="1_r1mvb"]
[ext_resource type="LabelSettings" uid="uid://cat466i40g3su" path="res://assets/themes/title_label.tres" id="3_ddgus"]
[ext_resource type="LabelSettings" uid="uid://b1p4n4pnlwjq3" path="res://assets/themes/menu_title_label.tres" id="4_7nyt0"]
[ext_resource type="LabelSettings" uid="uid://6cmppknv3tn2" path="res://assets/themes/title_description_label.tres" id="4_kxp0y"]
[ext_resource type="Texture2D" uid="uid://s58n60oovs3d" path="res://assets/tilesets/background-3.png" id="6_ild5s"]

[sub_resource type="Animation" id="Animation_7bgli"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 130)]
}

[sub_resource type="Animation" id="Animation_n6h3s"]
resource_name = "start"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MarginContainer:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 130), Vector2(0, -50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_80jl6"]
_data = {
"RESET": SubResource("Animation_7bgli"),
"start": SubResource("Animation_n6h3s")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_r2kr6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wqyln"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_pop28")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_80jl6")
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 130.0
offset_bottom = 130.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer"]
texture = ExtResource("6_ild5s")
centered = false
offset = Vector2(-80, 200)

[node name="TitleContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_r1mvb")

[node name="TitleRows" type="VBoxContainer" parent="TitleContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_r1mvb")

[node name="Labels" type="VBoxContainer" parent="TitleContainer/TitleRows"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_r1mvb")

[node name="TitleLabel" type="Label" parent="TitleContainer/TitleRows/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_r1mvb")
text = "Game Title"
label_settings = ExtResource("3_ddgus")

[node name="DescriptionLabel" type="Label" parent="TitleContainer/TitleRows/Labels"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_r1mvb")
theme_override_font_sizes/font_size = 16
text = "Description of the game!"
label_settings = ExtResource("4_kxp0y")

[node name="HSeparator" type="HSeparator" parent="TitleContainer/TitleRows"]
layout_mode = 2
theme_override_constants/separation = 96
theme_override_styles/separator = SubResource("StyleBoxEmpty_r2kr6")

[node name="Buttons" type="VBoxContainer" parent="TitleContainer/TitleRows"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_r1mvb")
theme_override_constants/separation = 11

[node name="StartButton" type="Button" parent="TitleContainer/TitleRows/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("1_r1mvb")
text = "Start"

[node name="SettingsButton" type="Button" parent="TitleContainer/TitleRows/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("1_r1mvb")
text = "Settings"

[node name="QuitButton" type="Button" parent="TitleContainer/TitleRows/Buttons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme = ExtResource("1_r1mvb")
text = "Quit"

[node name="SettingsContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsRows" type="VBoxContainer" parent="SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 32

[node name="SettingsLabel" type="Label" parent="SettingsContainer/SettingsRows" groups=["recolor"]]
layout_mode = 2
text = "Settings"
label_settings = ExtResource("4_7nyt0")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="SettingsContainer/SettingsRows"]
layout_mode = 2
theme_override_constants/separation = 64
theme_override_styles/separator = SubResource("StyleBoxEmpty_wqyln")

[node name="AudioLabel" type="Label" parent="SettingsContainer/SettingsRows" groups=["recolor"]]
layout_mode = 2
theme = ExtResource("1_r1mvb")
text = "Audio"
label_settings = ExtResource("4_kxp0y")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioSettings" type="GridContainer" parent="SettingsContainer/SettingsRows"]
layout_mode = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 11
columns = 2

[node name="EffectsLabel" type="Label" parent="SettingsContainer/SettingsRows/AudioSettings" groups=["recolor"]]
layout_mode = 2
theme = ExtResource("1_r1mvb")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Sound Effects"
vertical_alignment = 1

[node name="EffectsSlider" type="HSlider" parent="SettingsContainer/SettingsRows/AudioSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_r1mvb")
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicLabel" type="Label" parent="SettingsContainer/SettingsRows/AudioSettings" groups=["recolor"]]
layout_mode = 2
theme = ExtResource("1_r1mvb")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Music"
vertical_alignment = 1

[node name="MusicSlider" type="HSlider" parent="SettingsContainer/SettingsRows/AudioSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_r1mvb")
max_value = 1.0
step = 0.01
value = 1.0

[node name="MenuSoundsLabel" type="Label" parent="SettingsContainer/SettingsRows/AudioSettings" groups=["recolor"]]
layout_mode = 2
theme = ExtResource("1_r1mvb")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Menu Sounds"
vertical_alignment = 1

[node name="MenuSoundsSlider" type="HSlider" parent="SettingsContainer/SettingsRows/AudioSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_r1mvb")
max_value = 1.0
step = 0.01
value = 1.0

[node name="MasterLabel" type="Label" parent="SettingsContainer/SettingsRows/AudioSettings" groups=["recolor"]]
layout_mode = 2
theme = ExtResource("1_r1mvb")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "Master"
vertical_alignment = 1

[node name="MasterSlider" type="HSlider" parent="SettingsContainer/SettingsRows/AudioSettings"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("1_r1mvb")
max_value = 1.0
step = 0.01
value = 1.0

[node name="SettingsBackButton" type="Button" parent="SettingsContainer/SettingsRows" groups=["recolor"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("1_r1mvb")
text = "Back"
